[DS Gallery - React Component]

#ToDo
  00000000 | T | add ability to handle delegated key presses
v0.1.0
  20170412 | P | added react-hammerjs dependency https://www.npmjs.com/package/react-hammerjs
  20170412 | P | started development