@@ -3,22 +3,23 @@ import DsImage from './DsImage';
 
 class DsRoll extends Component {
 
-  createAnimationStyle(animation_name, x) {
-    console.log(animation_name, x)
-    let stylesheet = document.styleSheets[0];
-    let keyframes =
+  createAnimationStyle(animation_name, x_start, x_end) {
+    if (x_start !== x_end) {
+      let stylesheet = document.styleSheets[0];
+      let keyframes =
       `
-      @keyframes ${animation_name} {
-        0% {transform: translate(unset)}
-        100% {transform: translate(${x}px)}
-      }
-    `;
-    stylesheet.insertRule(keyframes, stylesheet.cssRules.length);
+        @keyframes ${animation_name} {
+          0% {transform: translate(${x_start}px)}
+          100% {transform: translate(${x_end}px)}
+        }
+      `; 
+      stylesheet.insertRule(keyframes, stylesheet.cssRules.length);
+    }
   }
 
 
   render() {
-    this.createAnimationStyle(this.props.animation.name, this.props.animation.x);
+    this.createAnimationStyle(this.props.animation.name, this.props.animation.x_start, this.props.animation.x_end);
     const style = {
       width: `${this.props.gallery.roll_width}px`,
       animationName: this.props.animation.name,
