@@ -1,8 +1,121 @@
 import React, { Component } from 'react';
 import './DsGallery.css';
 import Hammer from 'react-hammerjs';
-import DsRoll from './DsRoll';
-import DsControls from './DsControls';
+import PropTypes from 'prop-types';
+
+class DsImage extends Component {
+  constructor(props) {
+    super();
+    this.state = {
+      width: props.gallery.width,
+      height: props.gallery.height
+    }
+  }
+  componentWillReceiveProps(nextProps) {
+    if (nextProps.gallery.width !== this.state.width || nextProps.gallery.height !== this.state.height)
+      this.setState({
+        width: nextProps.gallery.width,
+        height: nextProps.gallery.height
+      })
+  }
+  render() {
+    var style = {
+      width: this.props.gallery.width,
+      height: this.props.gallery.height
+    }
+    return (
+      <div className="ds-gallery-img" style={style}>
+        <img src={this.props.url} alt="" />
+      </div>
+    )
+  }
+}
+
+class DsRoll extends Component {
+
+  createAnimationStyle(animation_name, x_start, x_end) {
+    if (x_start !== x_end) {
+      let stylesheet = document.styleSheets[0];
+      let keyframes =
+        `
+        @keyframes ${animation_name} {
+          0% {transform: translate(${x_start}px)}
+          100% {transform: translate(${x_end}px)}
+        }
+      `;
+      stylesheet.insertRule(keyframes, stylesheet.cssRules.length);
+    }
+  }
+
+
+  render() {
+    this.createAnimationStyle(this.props.animation.name, this.props.animation.x_start, this.props.animation.x_end);
+    const style = {
+      width: `${this.props.gallery.roll_width}px`,
+      animationName: this.props.animation.name,
+      animationDuration: `${this.props.animation.duration}ms`,
+      animationFillMode: 'forwards'
+    }
+    return (
+      <div className="ds-gallery-roll" style={style}>
+        {this.props.images.map((img, i) => <DsImage key={i} url={img} gallery={this.props.gallery} />)}
+      </div>
+    );
+  }
+}
+
+class DsControls extends Component {
+  constructor(props) {
+    super();
+    this.state = {
+      index: props.index
+    }
+  }
+  componentWillReceiveProps(nextProps) {
+    if (nextProps.index !== this.state.index)
+      this.setState({
+        index: nextProps.index
+      });
+  }
+  getDots(images, jumpTo) {
+    return images.map((img, i) => {
+      return (
+        <div
+          key={i}
+          onClick={jumpTo.bind(null, i)}
+          className="ds-control-dot"
+          style={{ transform: `scale(${i === this.state.index ? 1.5 : 1})` }}
+        />
+      )
+    })
+  }
+  render() {
+    return (
+      <div className="ds-controls">
+        {/*Arrow Back*/}
+        <svg onClick={this.props.actions.prev} className="ds-control-arrow" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
+        </svg>
+        {/*Dots*/}
+        <div className="ds-control-dots">
+          {this.getDots(this.props.images, this.props.actions.jumpTo)}
+        </div>
+        {/*Arrow Forward*/}
+        <svg onClick={this.props.actions.next} className="ds-control-arrow" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" />
+        </svg>
+      </div>
+    );
+  }
+}
+
+DsControls.propTypes = {
+  actions: PropTypes.PropTypes.objectOf(PropTypes.func),
+  images: PropTypes.array,
+  index: PropTypes.number
+};
 
 class DsGallery extends Component {
 
